<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    tools:context=".Main.Fragment.ContactUsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/logo_au"
                android:layout_height="@dimen/logo_au"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/padding_xlarge"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/fa_tv_title_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/padding_normal"
                android:layout_marginTop="@dimen/padding_normal"
                android:text="@string/title_app"
                android:textColor="@color/red"
                android:textSize="30sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    style="@style/contact_us_left_icons"
                    android:background="@drawable/top_rounded_red"
                    android:src="@drawable/ic_con_address" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fc_tv_addr"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/padding_large"
                        android:text="@string/address"
                        android:textColor="@color/black"
                        android:textStyle="bold" />


                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="@dimen/contact_us_height"
                    android:layout_height="wrap_content"
                    android:background="@color/red">

                    <ImageView
                        style="@style/contact_us_left_icons"
                        android:src="@drawable/ic_con_tel" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fc_tv_tel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_large"
                        android:text="@string/contact_tell"
                        android:textColor="@color/black"
                        android:textSize="@dimen/padding_large"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fc_tv_tel2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_large"
                        android:text="@string/contact_tell_2"
                        android:textColor="@color/black"
                        android:textSize="@dimen/padding_large"
                        android:textStyle="bold" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    style="@style/contact_us_left_icons"
                    android:src="@drawable/ic_con_fax" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fc_tv_fax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_large"
                        android:text="+49(0)02154/1475"
                        android:textColor="@color/black"
                        android:textSize="@dimen/padding_large"
                        android:textStyle="bold" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    style="@style/contact_us_left_icons"
                    android:src="@drawable/ic_con_mobile" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fc_tv_mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_large"
                        android:text="@string/contact_mobile"
                        android:textColor="@color/black"
                        android:textSize="@dimen/padding_large"
                        android:textStyle="bold" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    style="@style/contact_us_left_icons"
                    android:src="@drawable/ic_con_email" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fc_tv_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_large"
                        android:text="@string/contact_email"
                        android:textColor="@color/black"
                        android:textSize="@dimen/padding_large"
                        android:textStyle="bold" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    style="@style/contact_us_left_icons"
                    android:background="@drawable/bottom_rounded_red"
                    android:src="@drawable/ic_con_internet" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fc_tv_web"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_large"
                        android:text="@string/contact_web"
                        android:textColor="@color/black"
                        android:textSize="@dimen/padding_large"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
