<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main.Fragment.AboutFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <TextView
                android:id="@+id/fa_tv_title_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_xlarge"
                android:gravity="center"
                android:text="درباره ما"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_header2" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="@dimen/padding_xlarge"
                android:layout_marginRight="@dimen/padding_xlarge"
                android:layout_marginTop="@dimen/padding_large"
                android:background="@color/blue"
                android:layout_marginBottom="@dimen/padding_normal"/>


            <TextView
                android:id="@+id/fh_tv_title_program"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_small"
                android:gravity="center"
                android:text="@string/welcome_to_app"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                android:visibility="gone" />

            <com.sai.udstore.sai.JustifiedTextView
                android:id="@+id/fh_tv_comment_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_large"
                android:layout_marginRight="@dimen/padding_large"
                android:lineSpacingExtra="7dp"
                android:paddingLeft="@dimen/padding_small"
                android:paddingRight="@dimen/padding_small"
                android:text="@string/about"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:id="@+id/fh_tv_title_advatages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_small"
                android:layout_marginLeft="@dimen/padding_large"
                android:layout_marginRight="@dimen/padding_large"
                android:layout_marginTop="@dimen/padding_normal"
                android:text="@string/advantages_of_jik"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/fh_tv_comment_advatages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_large"
                android:layout_marginRight="@dimen/padding_large"
                android:lineSpacingExtra="7dp"
                android:paddingLeft="@dimen/padding_small"
                android:paddingRight="@dimen/padding_small"
                android:text="@string/advantages"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_small"
                android:visibility="gone" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding_large"

                android:visibility="gone">

                <ImageView
                    android:id="@+id/fc_img_facebook"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_facebook"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/fc_img_telegram"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_twitter"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/fc_img_instagram"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_instagram"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
